Check in the code that send ajax request to Google search to get the translate response, due to that Google translate api is not free anymore.

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -8,10 +8,9 @@
 </head>
 
 <body>
-    <div id="popup-content">
-        <div class="button">Test</div>
-    </div>
     <script src="popup.js"></script>
+    Translate addon helps you translate word on the web page from English to Chinese. Please make sure you have access
+    to Google search engine.
 </body>
 
 </html>
