--- a/popup/popup.html
+++ b/popup/popup.html
@@ -10,7 +10,7 @@
 <body>
     <script src="popup.js"></script>
     Translate addon helps you translate word on the web page from English to Chinese. Please make sure you have access
-    to Google search engine.
+    to Google search engine. Once installed, if you highlight some words you will see a "Translate" button. Click the button to translate.
 </body>
 
 </html>
